cockroachlabs-preview-main/docs/v25.2/create-virtual-cluster.mdx
---
title: "CREATE VIRTUAL CLUSTER"
old_description: "The CREATE VIRTUAL CLUSTER statement creates a new target virtual cluster for physical replication."
---

import { InlineImage } from "/snippets/InlineImage.jsx";
import { CreateVirtualCluster } from "/snippets/syntax-diagrams/CreateVirtualCluster.jsx";

<Note>
**This feature is in [preview](/docs/v25.2/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).
</Note>

The `CREATE VIRTUAL CLUSTER` statement creates a new virtual cluster. It is supported only starting a [**physical cluster replication (PCR)** job](/docs/v25.2/set-up-physical-cluster-replication).

PCR happens between an *active* primary cluster and a *passive* standby cluster that accepts updates from the primary cluster. The unit of replication is a *virtual cluster*, which is part of the underlying infrastructure in the primary and standby clusters. The CockroachDB cluster has:

- The system virtual cluster manages the cluster's control plane and the replication of the cluster's data. Admins connect to the system virtual cluster to configure and manage the underlying CockroachDB cluster, set up PCR, create and manage a virtual cluster, and observe metrics and logs for the CockroachDB cluster and each virtual cluster.
- The application virtual cluster manages the cluster’s data plane. Application virtual clusters contain user data and run application workloads.

For more detail, refer to the [Physical Cluster Replication Overview](/docs/v25.2/physical-cluster-replication-overview).

## Required privileges

<InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v25.2: The following [privileges](/docs/v25.2/security-reference/authorization#supported-privileges) are required to start a PCR stream with `CREATE VIRTUAL CLUSTER`:

- The `REPLICATIONDEST` and `MANAGEVIRTUALCLUSTER` system privileges: The user starting the PCR stream from the standby cluster.
- The `REPLICATIONSOURCE` system privilege: The user specified in the connection string for the primary cluster.

Use the [`GRANT SYSTEM`](/docs/v25.2/grant) statement to grant the necessary privileges to users, for example:

```sql
GRANT SYSTEM MANAGEVIRTUALCLUSTER TO user;
```

## Synopsis

xml version="1.0" encoding="UTF-8"?

<CreateVirtualCluster />

## Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>virtual&#95;cluster&#95;name</code></td><td>The name for the new virtual cluster.</td></tr><tr><td><code>LIKE virtual&#95;cluster&#95;spec</code></td><td>Creates a virtual cluster with the same <a href="#capabilities">capabilities</a> and settings as another virtual cluster.</td></tr><tr><td><code>primary&#95;virtual&#95;cluster</code></td><td>The name of the primary's virtual cluster to replicate.</td></tr><tr><td><code>primary&#95;connection&#95;string</code></td><td>The PostgreSQL connection string to the primary cluster. Refer to <a href="#connection-string">Connection string</a> for more detail.</td></tr><tr><td><code>replication&#95;options&#95;list</code></td><td>Options to modify the PCR streams. Refer to <a href="#options">Options</a>.</td></tr></tbody></table>

## Options

<table><thead><tr><th>Option</th><th>Description</th></tr></thead><tbody><tr><td><code>READ VIRTUAL CLUSTER</code></td><td>(<a href="/docs/v25.2/cockroachdb-feature-availability#features-in-preview"><strong>Preview</strong></a>) Create a <a href="/docs/v25.2/physical-cluster-replication-technical-overview#start-up-sequence-with-read-on-standby">read-only virtual cluster</a> on the standby cluster, which allows reads of the standby's replicating virtual cluster. For an example, refer to <a href="#start-a-pcr-stream-with-read-from-standby">Start a PCR stream with read from standby</a>.</td></tr></tbody></table>

## Connection string

When you [initiate a PCR stream](/docs/v25.2/set-up-physical-cluster-replication#step-4-start-replication) from the standby cluster, it is necessary to pass a connection string to the system virtual cluster on the primary cluster:

```text
'postgresql://{replication user}:{password}@{node IP or hostname}:26257?options=-ccluster=system&sslmode=verify-full&sslrootcert=certs/{primary cert}.crt'
```

To form a connection string similar to the example, include the following values and query parameters. Replace values in `{...}` with the appropriate values for your configuration:

<table><thead><tr><th>Value</th><th>Description</th></tr></thead><tbody><tr><td><code>&#123;replication user&#125;</code></td><td>The user on the primary cluster that has the <code>REPLICATION</code> system privilege. Refer to <a href="/docs/v25.2/set-up-physical-cluster-replication#create-a-user-with-replication-privileges">Create a user with replication privileges</a> for more detail.</td></tr><tr><td><code>&#123;password&#125;</code></td><td>The replication user's password.</td></tr><tr><td><code>&#123;node ID or hostname&#125;</code></td><td>The node IP address or hostname of any node from the primary cluster.</td></tr><tr><td><code>options=ccluster=system</code></td><td>The parameter to connect to the system virtual cluster on the primary cluster.</td></tr><tr><td><code>sslmode=verify-full</code></td><td>The <code>verify-full</code> secure connection type.</td></tr><tr><td><code>sslrootcert=&#123;primary cert&#125;</code></td><td>The path to the primary cluster's CA certificate on the standby cluster.</td></tr></tbody></table>

## Capabilities

<Note>
Cockroach Labs does not recommend changing the default capabilities of created virtual clusters.
</Note>

*Capabilities* control what a virtual cluster can do. When you start a PCR stream, you can specify a virtual cluster with `LIKE` to ensure other virtual clusters on the standby cluster will work in the same way. `LIKE` will refer to a virtual cluster on the CockroachDB cluster you're running the statement from.

## Examples

### Start a PCR stream

To start a PCR stream to the standby of the primary's virtual cluster:

```sql
CREATE VIRTUAL CLUSTER main FROM REPLICATION OF main ON 'postgresql://{connection string to primary}';
```

This will create a `main` virtual cluster in the standby cluster. The standby's system virtual cluster will connect to the primary cluster to initiate the PCR job. For details on the PCR stream, refer to the [Responses](/docs/v25.2/show-virtual-cluster#responses) for `SHOW VIRTUAL CLUSTER`.

### Start a PCR stream with read from standby

<Note>
While **physical cluster replication (PCR)** is generally available, using the `READ VIRTUAL CLUSTER` option to read from a standby cluster is in [preview](/docs/v25.2/cockroachdb-feature-availability#features-in-preview).
</Note>

Use the `READ VIRTUAL CLUSTER` option to set up a PCR stream that also creates a read-only virtual cluster on the standby cluster. You can create a PCR job as per the [Set Up Physical Cluster Replication](/docs/v25.2/set-up-physical-cluster-replication) guide and then add the option to the `CREATE VIRTUAL CLUSTER` statement:

```sql
CREATE VIRTUAL CLUSTER main FROM REPLICATION OF main ON 'postgresql://{connection string to primary}' WITH READ VIRTUAL CLUSTER;
```

View the newly created virtual clusters:

```sql
SHOW VIRTUAL CLUSTERS;
```

You'll find:

- The `main` virtual cluster, which is accepting writes from the primary cluster.
- The `main-readonly` virtual cluster, which is a read-only version of the `main` virtual cluster.

```text
  id |     name      | data_state  | service_mode
-----+---------------+-------------+---------------
   1 | system        | ready       | shared
   3 | main          | replicating | none
   4 | main-readonly | ready       | shared
(3 rows)
```

To read table data from the standby cluster, connect to the `readonly` virtual cluster:

```shell
cockroach sql --url `"postgresql://root@{node IP or hostname}:{26257}?options=-ccluster=main-readonly&sslmode=verify-full"` --certs-dir=certs
```

<Note>
You can only read data on the created `readonly` virtual cluster, other operations like `SHOW VIRTUAL CLUSTERS` must be run from the `system` virtual cluster. To connect to the `readonly` virtual cluster, refer to the [Connection Reference](/docs/v25.2/set-up-physical-cluster-replication#connection-reference).
</Note>

If you started the PCR stream with the `READ VIRTUAL CLUSTER` option, failing over with `SYSTEM TIME` will destroy the `readonly` virtual cluster. If you fail over with `LATEST`, the `readonly` virtual cluster will remain on the original standby cluster, but will **not** update with new writes. Use [`DROP VIRTUAL CLUSTER`](/docs/v25.2/drop-virtual-cluster) to remove the `readonly` virtual cluster.

For details on adding a read-only virtual cluster after a failback, refer to the [`ALTER VIRTUAL CLUSTER`](/docs/v25.2/alter-virtual-cluster) page.

## See also

- [`DROP VIRTUAL CLUSTER`](/docs/v25.2/drop-virtual-cluster)
- [`ALTER VIRTUAL CLUSTER`](/docs/v25.2/alter-virtual-cluster)
- [`SHOW VIRTUAL CLUSTER`](/docs/v25.2/show-virtual-cluster)
